   * revised multiplayer maps: Divide and Conquer, Sablestone Delta,
     Silverhead Crossing, Sullas Ruins, 1v1v1Hex, Charge, Blitz, Clash, 
     Hamlets, Meteor Lake, Den of Onis, Smallolof, CastleHoppingIsle,
     Hornshark Island
   * updated multiplayer maps cfg files: Clash, Hexcake, Smallolof
   * fixed gamelist diff bug
 * campaign server
   * Support new "timestamp" attribute
   * Save persistent attributes in the campaign data
     * The campaign name cannot be stored in "name" as that is treated as a
       directory name, so use campaign_name instead. (Fixes bug #4525.)
     * The campaign server now checks of file and directory names on upload
       the same as the campaign name to prevent custom clients from entering
       malicious names.
   * Support filtering on campaign_list requests
     * filter by name
     * filter by last update time (before or after)
     * filter by language of translation
   * campaign_list response now contains the time the request was processed
   * campaign_list response now contains information about translations
   * problem with duplicate translations being saved with each upload has been
     fixed.
   * I added a check for a name of "." to the list of invalid campaign names.
     We should think about a list of valid characters rather than invalid ones.
     Something like ^[A-Za-z0-9_]+$ instead of trying to list potentially bad
     names.
   * Moved check_names_legal from campaign_server to publish_campaign in
     preperation for using it to check downloaded campaigns.
   * The download client has been changed to check the safety of names before
     trying to install a downloaded campaign. If any unsafe names are found
     the install is aborted before any old version of the campaign is removed.
 * utils: added weblist.pl and webtgz.pl web interface programs
   * updated weblist.pl to display translation information
   * updated weblist.pl and webtgz.pl to use standard wesnoth logo banner