@@ -90,16 +90,16 @@ ability_teleport= _ "teleport"
 # Weapon special effect descriptions
 
 weapon_special_backstab_description= _ "Backstab:
-This attack deals double damage if a friendly unit is on the opposite side of the target. (This doesn't work with allied units.)"
+This attack deals double damage when the attacking unit is adjacent to the target and there is a unit on the directly opposite side of the target that is not allied with the target and that is not incapacitated (e.g. turned to stone)."
 
 weapon_special_berserk_description= _ "Berserk:
-Whether used offensively or defensively, this attack presses the engagement until one of the combatants is slain."
+Whether used offensively or defensively, this attack presses the engagement until one of the combatants is slain (or 30 rounds of attacks have occurred)."
 
 weapon_special_charge_description= _ "Charge:
 This attack deals double damage to the target. It also causes this unit to take double damage from the target's counterattack."
 
 weapon_special_drain_description= _ "Drain:
-This unit drains health from living units, healing itself for half the amount of damage it deals."
+This unit drains health from living units, healing itself for half the amount of damage it deals (rounded down)."
 
 weapon_special_firststrike_description= _ "First Strike:
 This unit always strikes first with this attack, even if they are defending."
